--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ universal=1
 
 [metadata]
 name = pygrin
-version = 0.4.2
+version = 0.4.3
 author = Scott Prahl
 author_email = scott.prahl@oit.edu
 license = MIT
@@ -26,6 +26,7 @@ classifiers =
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 
 [options]
 packages = pygrin
