--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
-include CHANGELOG.rst
-include LICENSE.txt
 exclude release.txt
 exclude .gitignore
 exclude Makefile
 exclude docs/*
+include CHANGELOG.rst
+include LICENSE.txt
+include test_all_notebooks.py
