--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,3 +9,9 @@ version: 2
 sphinx:
    builder: html
    configuration: docs/conf.py
+
+# Optionally set the version of Python and requirements required to build your docs
+python:
+  version: 3.7
+  install:
+    - requirements: docs/requirements.txt
