--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
-exclude release.txt
-exclude .gitignore
-exclude Makefile
-exclude docs/*
 include CHANGELOG.rst
 include LICENSE.txt
-include test_all_notebooks.py
+exclude .gitignore
+exclude .readthedocs.yaml
+exclude release.txt
+exclude Makefile
+exclude docs/*
+exclude test_all_notebooks.py
