--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,5 @@
 [metadata]
-name = pygrin
-version = 0.4.4
-author = Scott Prahl
-author_email = scott.prahl@oit.edu
-license = MIT
 description = Gradient Index (GRIN) Lens Calculations
-url = https://github.com/scottprahl/pygrin.git
 
 keywords =
     endoscope
@@ -19,14 +13,26 @@ classifiers =
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Physics
     Programming Language :: Python
-    Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
 
 [options]
 packages = pygrin
 install_requires = numpy; matplotlib
 python_requires = >=3.4
 setup_requires = setuptools>=44
+
+[flake8]
+ignore = W503, D212, N802, N803, N806, E501
+per-file-ignores = 
+    __init__.py:F401,F403
+    setup.py:D100
+exclude =
+    .git,
+    __pycache__,
+    docs
+max-line-length = 99
+docstring-convention = google
