--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,3 @@
 [build-system]
-requires = [
-    "setuptools >= 35.0.2",
-    "setuptools_scm >= 2.0.0, <3"
-]
+requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
-
-[tool.tox]
-legacy_tox_ini = """
-
-[tox]
-envlist = py39
-
-[testenv]
-
-commands =
-"""
