--- a/setup.cfg
+++ b/setup.cfg
@@ -20,9 +20,11 @@ classifiers =
 
 [options]
 packages = pygrin
-install_requires = numpy; matplotlib
-python_requires = >=3.4
+python_requires = >=3.8
 setup_requires = setuptools>=44
+install_requires = 
+    numpy
+    matplotlib
 
 [flake8]
 ignore = W503, D212, N802, N803, N806, E501
