--- a/setup.cfg
+++ b/setup.cfg
@@ -13,14 +13,16 @@ classifiers =
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Physics
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 packages = pygrin
-python_requires = >=3.8
+python_requires = >=3.7
 setup_requires = setuptools>=44
 install_requires = 
     numpy
@@ -35,5 +37,5 @@ exclude =
     .git,
     __pycache__,
     docs
-max-line-length = 99
+max-line-length = 110
 docstring-convention = google
