--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,77 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=77", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.ruff]
-line-length = 110
-exclude =['.git', '__pycache__', 'docs']
+[tool.setuptools]
+packages = ["pygrin"]
 
-[tool.ruff.lint]
-select = ["D", "E", "F", "W"]
-ignore = ["D212", "F403"]
-pydocstyle.convention = "google"
-
-[tool.check-manifest]
-ignore = [
-    ".readthedocs.yaml",
-    "docs/*",
-    "Makefile",
-    "release.txt",
-    "requirements.txt",
-    "todo",
+[project]
+name = "pygrin"
+version = "0.6.0"
+authors = [
+    { name = "Scott Prahl", email = "scott.prahl@oit.edu" }
+]
+description = "Gradient Index (GRIN) Lens Calculations"
+keywords = ["endoscope", "pitch", "SELFOC", "Graded Index"]
+readme = "README.rst"
+license = "BSD-3-Clause"
+dependencies = [
+    "matplotlib",
+    "numpy",
+]
+requires-python = ">=3.9"
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13"
 ]
 
-[tool.pytest.ini_options]
-markers = ["notebooks"]
+[project.optional-dependencies]
+dev = ["pytest >= 7.0"]
+
+[project.urls]
+Homepage = "https://github.com/scottprahl/pygrin"
+Documentation = "https://pygrin.readthedocs.io"
+Source = "https://github.com/scottprahl/pygrin"
+Tracker = "https://github.com/scottprahl/pygrin/issues"
+Changelog = "https://github.com/scottprahl/pygrin/blob/main/docs/CHANGELOG.rst"
+
+[tool.black]
+line-length = 120
+target-version = ["py39", "py310", "py311", "py312"]
 
 [tool.pylint]
 disable = [
-    "invalid-name",
-    "line-too-long",
-    "too-many-locals",
-    "too-many-arguments",
-    "consider-using-f-string",
-    "too-many-statements",
-  ]
+    "C0103", "C0209", "C0302",
+    "R0902", "R0904", "R0912", "R0913", "R0914", "R0915", "R0917", "R1702",
+    "W0511"
+]
+max-line-length = 120
+
+[tool.ruff]
+line-length = 120
+exclude = ["docs", ".venv"]
+lint.select = ["D", "E", "F", "W"]
+lint.ignore = ["D200", "D212", "F403"]
+lint.pydocstyle.convention = "google"
+
+[tool.check-manifest]
+ignore = [
+  ".readthedocs.yaml",
+  ".jupyterlite-ignore",
+  "Makefile",
+  "requirements-dev.txt",
+  "jupyter_lite_config.json",
+  "docs/*",
+  "docs/**/*",
+  "release.txt",
+]
+
+
