--- a/.github/workflows/citation.yaml
+++ b/.github/workflows/citation.yaml
@@ -11,17 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          # Need full history so we can push back to the branch
+          fetch-depth: 0
+          # On a release event, use the branch/tag the release points to
+          # On workflow_dispatch, fall back to the current ref
+          ref: ${{ github.event.release.target_commitish || github.ref }}
 
-      - uses: actions/setup-python@v5
+      - name: Install python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.12
 
-      - name: Install dependencies for update_citation.py
+      - name: Install dependencies needed for update_citation.py
         run: |
           pip install requests PyYAML
 
-      - name: Update CITATION.cff
+      - name: Update CITATION.cff and README.rst
         run: |
           python .github/scripts/update_citation.py
 
