--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -1,37 +1,35 @@
----
-name: pypi
+name: Publish to PyPI
 
-on:    # yamllint disable-line rule:truthy
+on:
   release:
     types: [published]
   workflow_dispatch:
 
 jobs:
-  publish:
+  build-and-publish:
     runs-on: ubuntu-latest
-
-    environment:
-      name: pypi repository
-      url: https://pypi.org/p/pygrin
-
+    environment: pypi-repository
     permissions:
+      contents: read
       id-token: write
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.release.tag_name }}
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.12
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
 
-      - name: Build
-        run: |
-          pip install setuptools wheel twine build
-          pip install pytest
-          pip install numpy
-          python -m build
+    - name: Build package
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install build
+        python -m build
 
-      - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          verbose: true
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        verbose: true
+        attestations: true
