--- a/.github/workflows/citation.yaml
+++ b/.github/workflows/citation.yaml
@@ -1,6 +1,8 @@
+# yamllint disable rule:truthy
+# yamllint disable rule:line-length
 ---
-name: citation
-on:    # yamllint disable-line rule:truthy
+name: Update Citation
+on:
   release:
     types: [published]
   workflow_dispatch:
@@ -13,20 +15,20 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.event.release.target_commitish || github.ref }}
-          
+
       - name: Install python
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
-          
+
       - name: Install dependencies needed for update_citation.py
         run: |
           pip install requests PyYAML
-          
+
       - name: Update CITATION.cff and README.rst
         run: |
           python .github/scripts/update_citation.py
-          
+
       - name: Commit and Push CITATION.cff Update
         run: |
           git config --local user.email "action@github.com"
