--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -1,3 +1,5 @@
+# yamllint disable rule:truthy
+---
 name: Publish to PyPI
 
 on:
@@ -8,28 +10,32 @@ on:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
+
     environment: pypi-repository
+
     permissions:
       contents: read
       id-token: write
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.release.tag_name }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.release.tag_name }}
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Install python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
-    - name: Build package
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install build
-        python -m build
+      - name: Build package
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install build
+          python -m build
 
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        verbose: true
-        attestations: true
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          verbose: true
+          attestations: true
